--- a/crontab.config
+++ b/crontab.config
@@ -3,5 +3,5 @@ RUBYLIB=/usr/local/lib/ruby/2.2.0
 ROOTDIR=/root/
 URL="http://example.com"
 
-31 * * * * /bin/bash -lc "(cd $ROOTDIR && ruby main.rb $URL)" >> /tmp/cronlog.log 2>> /tmp/cronlog.log
+31 * * * * env `cat /root/env.txt` /bin/bash -lc "(cd $ROOTDIR && ruby main.rb $URL)" >> /tmp/cronlog.log 2>> /tmp/cronlog.log
 
